--- a/TMS/TMS/Areas/Manager/Views/ManageSC/Impact.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/ManageSC/Impact.cshtml
@@ -79,8 +79,8 @@
                 <h4 class="modal-title">Are you sure?</h4>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="yes-btn">Yes</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                <button type="button" class="btn btn-primary" id="yes-btn"><i class="fa fa-check" aria-hidden="true"></i> Yes</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> No</button>
             </div>
         </div>
         <!-- /.modal-content -->
