--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using TMS.Utils
+@{
     Layout = "~/Areas/HelpDesk/Views/Shared/_TopLayout.cshtml";
     ViewBag.Title = "Ticket Management";
 }
@@ -309,14 +310,14 @@
                                         <div class="col-sm-6" style="padding-left: 30px"><span id="ticket-technician"></span></div>
                                     </div>
                                 </div>
-                                <div class="col-sm-12 row-content ">
+                                <div class="col-sm-12 row-content">
                                     <div class="col-sm-4">
                                         <div class="col-sm-6 labels">
                                             <b>Created by: </b>
                                         </div>
                                         <div class="col-sm-6" style="padding-left: 19px"><span id="ticket-created-by"></span></div>
                                     </div>
-                                    <div class="col-sm-4 ">
+                                    <div class="col-sm-4">
                                         <div class="col-sm-6 labels">
                                             <b>Assigned by: </b>
                                         </div>
@@ -327,6 +328,17 @@
                                             <b>Solved by: </b>
                                         </div>
                                         <div class="col-sm-6"><span id="ticket-solved-by"></span></div>
+                                    </div>
+
+                                </div>
+                                <div class="col-sm-12 row-content" id="ticket-merged-div" style="display:none">
+                                    <div class="col-sm-12">
+                                        <div class="col-sm-2 labels">
+                                            <b>Merged into: </b>
+                                        </div>
+                                        <div class="col-sm-10" style="padding-left: 10px">
+                                            <span id="ticket-merged" class="pre-wrap"></span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -413,7 +425,7 @@
                             <option value="2">Assigned</option>
                             <option value="3">Solved</option>
                             <option value="4">Unapproved</option>
-                            <option value="5">Canceled</option>
+                            <option value="5">Cancelled</option>
                             <option value="6">Closed</option>
                         </select>&nbsp;&nbsp; &nbsp;
                         <label>Search: &nbsp;</label>
