add business rule trigger

--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
@@ -596,7 +596,7 @@
                             initRequesterDropdown({
                                 control: $("#" + inputId),
                                 ignore: function() {
-                                    return $("#" + inputId).val();
+                                    return []; //$("#" + inputId).val();
                                 }
                             });
                             if (anchorTag.children[4].innerHTML != "") {
